gccida/c0/xstrerror
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/xstrerror/src/xstrerror.c:510:25: error: use of undeclared identifier 'aUndocumentedEr'
sprintf( xstrerror_buf, aUndocumentedEr, ( unsigned int)errnum); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/xstrerror/src/obj/xstrerror.o] Error 1
